# polly

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE_HEAD  Makefile  build.sh
polly/: any.h  asio.cc  asio.h  boost_asio.h  channel.h  channel_test.cc  codec.h  codec_test.cc  compiler.h  database.cc  database.h  database_pool.h  debug.cc  debug.h  error_code.cc  format.cc  format.h  fs.cc  fs.h  kafka.cc  kafka.h  kafka_example.cc  logging.cc  logging.h  modbus.h  platform.h  ring.h  ring_test.cc  strings.cc  strings.h  stubs.h  system.cc  system.h  uuid.h  version.h
polly/common/: any_test.cc  asio_wrapper.h  channel_test.cc  codec_test.cc  debug.h  error_code.h  format.h  fs.h  kafka.cc  kafka.h  kafka_example.cc  macros.h  ring.h  ring_test.cc  stringpiece.h  stringpiece_test.cc  throw_delegate.cc  throw_delegate.h
polly/communication/: modbus.cc  modbus.h
polly/database/: database.cc  database.h  mysql.cc  sql.cc  sql.h
polly/getline/: linenoise.c  linenoise.h
polly/logging/: log_level.h  logging.cc
polly/stubs/: any.h  any_test.cc  assert.cc  assert.h  attributes.h  check.cc  check.h  config.h  const.h  enable_special_members.h  exception.cc  exception.h  hash.cc  hash.h  hash_test.cc  identity.h  invoke.h  invoke_test.cc  macros.h  optional.h  optional_test.cc  span.h  span_test.cc  string_view.h  string_view_test.cc  type_traits.h  type_traits_test.cc  utility.h  variant.h  variant_test.cc
polly/stubs/base/: attributes.h  check.cc  check.h  config.h  const.h  exception.cc  exception.h  macros.h
polly/stubs/hash/: hash.cc  hash.h
polly/stubs/internal/: any.h  config.h  enable_special_members.h  inline_variable.h  optional.h  optional_base.h  raw_logging.cc  raw_logging.h  span.h  throw_delegate.cc  throw_delegate.h  type_id.h  variant.h
polly/stubs/strings/: string_view.cc  string_view.h  string_view_test.cc
polly/stubs/strings/internal/: string_view.h
